# TrigonometricPaint

./: CMakeLists.txt  README.md  main.cpp
include/color/: bw_color.h  color.h  rgb_color.h
include/matrix/: bw_matrix.h  matrix.h  rgb_matrix.h
include/shape/: circle.h  point.h  rectangle.h  shape.h  triangle.h
src/matrix/: bw_matrix.cpp  matrix.cpp  rgb_matrix.cpp
src/shape/: circle.cpp  rectangle.cpp  triangle.cpp
